add card labels function

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         type="search"
         id="input-search"
         class="input-search"
+        placeholder="Search..."
       />
     </header>
 
