search pokemon function

--- a/index.html
+++ b/index.html
@@ -35,14 +35,13 @@
           id="search-input"
           class="search-input"
           placeholder="Search your pokemon"
-          onchange="searchPokemon()"
         />
-        <button class="search-btn">
-          <img
-            src="./assets/icons/magnify.png"
-            alt="magnify icon"
-          />
-        </button>
+        <img
+          src="./assets/icons/x-icon.png"
+          alt="x icon"
+          class="search-clear-btn"
+          id="search-clear-btn"
+        />
       </div>
     </header>
 
