disable loadMoreBtn in search function

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <div class="button-container">
           <button
             class="load-more-btn"
+            id="load-more-btn"
             onclick="loadMorePokemons()"
           >
             Load more
