create loading spinner

--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
     />
   </head>
   <body>
+    <section
+      class="loading-section"
+      id="loading-section"
+    >
+      <div class="loading-spinner"></div>
+    </section>
+
     <header class="header">
       <h1>
         <span
@@ -62,6 +69,7 @@
           </button>
         </div>
       </section>
+
       <section
         class="modal"
         id="modal"
